k8s/plane/deprecated/ingress/ingress-plane.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: plane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: plane.luis122448.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: api.plane.luis122448.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8000
  - host: realtime.plane.luis122448.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realtime
            port:
              number: 3000
  tls:
  - hosts:
    - plane.luis122448.com
    - api.plane.luis122448.com
    - realtime.plane.luis122448.com
    secretName: plane-luis122448-com-tls
